@@ -2,7 +2,7 @@
 """Autogenerated file, do not edit. Submit translations on Transifex."""
 
 MESSAGES = {
-    "%d min remaining to read": "% min restants per a llegir",
+    "%d min remaining to read": "%d min restants per a llegir",
     "(active)": "(actiu)",
     "Also available in:": "També disponible en:",
     "Archive": "Arxiu",
@@ -45,5 +45,5 @@ MESSAGES = {
     "Write your post here.": "Escriviu la vostra entrada aquí.",
     "old posts, page %d": "entrades antigues, pàgina %d",
     "page %d": "pàgina %d",
-    "updated": "",
+    "updated": "actualitzat",
 }
