@@ -134,10 +134,12 @@ LEGAL_VALUES = {
         ('ja', '!jp'): 'Japanese',
         'ko': 'Korean',
         'lt': 'Lithuanian',
+        'mi': 'Maori',
         'ml': 'Malayalam',
         'mr': 'Marathi',
         'nb': 'Norwegian (Bokmål)',
         'nl': 'Dutch',
+        'oc': 'Occitan',
         'pa': 'Punjabi',
         'pl': 'Polish',
         'pt': 'Portuguese',
@@ -204,10 +206,12 @@ LEGAL_VALUES = {
         'ja': 'ja',
         'ko': 'ko',
         'lt': 'lt',
+        'mi': 'mi',
         'ml': 'ml',
         'mr': 'mr',
         'nb': 'nb',
         'nl': 'nl',
+        'oc': 'oc',
         'pa': 'pa',
         'pl': 'pl',
         'pt': 'pt',
